# qdrant-ai-retail-store-supervisor

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS_README.md  CLAUDE.md  Dockerfile.prod  FEASIBILITY_AND_SCALABILITY.md  Makefile  README.md  docker-compose.perf.yml  docker-compose.voice.yml  docker-compose.yml  evaluation_script.py  index.html  pyproject.toml  qdrant_client_helper.py  qdrant_manager.py  requirements-perf.txt  requirements.txt  settings.gradle.kts  supervisor_agent.py
.claude/: CLAUDE.md
agents/: cultural_agent.py  discovery_inventory_agent.py  inventory_agent.py  merchandising_agent.py  mock_retail_apis.py  pricing_agent.py  response_generator.py  retail_api_client.py  shopper_agent.py  swiss_supervisor_agent.py
app/: __init__.py  config.py  debug_endpoints.py  embeddings.py  generator.py  livemap_api.py  main.py  metrics.py  privacy.py  qdrant_client.py  qdrant_utils.py  reranker.py  shopping_agents.py
backend/: Dockerfile  Dockerfile.gpu  Makefile  README.md  TECHNICAL_REPORT.md  config.py  demo.py  docker-compose.geomap.yml  docker-compose.kg.yml  docker-compose.prod.yml  inventory_agent.py  promotions_agent.py  pyproject.toml  requirements.txt  seed_products.py  shopper_agent.py
composeApp/: build.gradle.kts
context_engine/: context_builder.py
copilot/: retail_copilot.py
demo/: autonomous_store.py  dashboard.py  genai_dashboard.py  generation_demo.py  inventory_pricing.py  kg_explorer.py  price_forecasting.py
docs/: ARCH-BUSINESS-BACKEND.md  ASSUMPTIONS.md  GEOMAP.md  qdrant-value-and-implementation.md  (+1 more)
(+672 files in other folders)
