[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_store_supervisor_v5_hybrid_rag"
version = "0.1.0"
description = "Agentic RAG for retail demo"
authors = [{name="Your Team", email="you@example.com"}]

[project.dependencies]
fastapi = "*"
uvicorn = "*"
qdrant-client = ">=1.3.0"
sentence-transformers = "*"
transformers = "*"
torch = "*"
numpy = "*"
polars = "*"
pytest = "*"
mypy = "*"
flake8 = "*"
requests = "*"
python-dotenv = "*"
pandas = "*"
scipy = "*"
plotly = "*"
